--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natalia Michelena | Psicóloga em Santa Maria - Terapia Psicanalítica</title>
-    <meta name="description" content="Atendimento psicológico psicanalítico em Santa Maria e online. Psicóloga Natalia Michelena, formada pela UFN, especializada em psicanálise para ansiedade, depressão e desenvolvimento pessoal." />
-    <meta name="keywords" content="Psicóloga em Santa Maria, Terapia psicanalítica, Atendimento psicológico psicanalítico, Natalia Michelena, UFN, psicanálise online" />
-    <meta name="author" content="Natalia Michelena" />
+    <title>Natália Michelena | Psicóloga em Santa Maria</title>
+    <meta name="description" content="Atendimento psicológico psicanalítico em Santa Maria e online. Psicóloga Natália Michelena, formada pela UFN, especializada em psicanálise para ansiedade, depressão e desenvolvimento pessoal." />
+    <meta name="keywords" content="Psicóloga em Santa Maria, Terapia psicanalítica, Atendimento psicológico psicanalítico, Natália Michelena, UFN, psicanálise online" />
+    <meta name="author" content="Natália Michelena" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:title" content="Natalia Michelena | Psicóloga em Santa Maria - Terapia Psicanalítica" />
-    <meta property="og:description" content="Atendimento psicológico psicanalítico em Santa Maria e online. Agende sua consulta com a psicóloga Natalia Michelena, especialista em psicanálise." />
+    <meta property="og:title" content="Natália Michelena | Psicóloga em Santa Maria - Abordagem Psicanalítica" />
+    <meta property="og:description" content="Atendimento psicológico psicanalítico em Santa Maria e online. Agende sua consulta com a psicóloga Natália Michelena, especialista em psicanálise." />
     <meta property="og:url" content="https://nataliamichelena.com.br" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Natalia Michelena | Psicóloga em Santa Maria - Terapia Psicanalítica" />
-    <meta name="twitter:description" content="Atendimento psicológico psicanalítico em Santa Maria e online com a psicóloga Natalia Michelena, formada pela UFN." />
+    <meta name="twitter:title" content="Natália Michelena | Psicóloga em Santa Maria - Abordagem Psicanalítica" />
+    <meta name="twitter:description" content="Atendimento psicológico psicanalítico em Santa Maria e online com a psicóloga Natália Michelena, formada pela UFN." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
